accelerated-domains: add auto-changchun.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12378,6 +12378,7 @@ server=/authing.co/114.114.114.114
 server=/authing.com/114.114.114.114
 server=/autismjumpstart.org/114.114.114.114
 server=/auto-ccpit.org/114.114.114.114
+server=/auto-changchun.com/114.114.114.114
 server=/auto-ekontrol.com/114.114.114.114
 server=/auto-learning.com/114.114.114.114
 server=/auto-made.com/114.114.114.114
