accelerated-domains: add hyptec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45728,6 +45728,7 @@ server=/hyperstrong.com/114.114.114.114
 server=/hyphencargo.com/114.114.114.114
 server=/hypnotherapyforeverybody.com/114.114.114.114
 server=/hyppmm.com/114.114.114.114
+server=/hyptec.com/114.114.114.114
 server=/hypyimei.com/114.114.114.114
 server=/hyqdxcl.com/114.114.114.114
 server=/hyrainbow.com/114.114.114.114
