accelerated-domains: add top-elan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84300,6 +84300,7 @@ server=/tootour.com/114.114.114.114
 server=/toouoo.com/114.114.114.114
 server=/toouq.com/114.114.114.114
 server=/top-cnc.com/114.114.114.114
+server=/top-elan.com/114.114.114.114
 server=/top-trust.com/114.114.114.114
 server=/top/114.114.114.114
 server=/top100school.com/114.114.114.114
