accelerated-domains: add iyunche.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49004,6 +49004,7 @@ server=/iyuedian.com/114.114.114.114
 server=/iyuezhang.net/114.114.114.114
 server=/iyunbao.com/114.114.114.114
 server=/iyunbiao.com/114.114.114.114
+server=/iyunche.com/114.114.114.114
 server=/iyunmai.com/114.114.114.114
 server=/iyunmu.com/114.114.114.114
 server=/iyunshu.com/114.114.114.114
