accelerated-domains: add nb-jf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64127,6 +64127,7 @@ server=/nazhidj.com/114.114.114.114
 server=/nazhilong.com/114.114.114.114
 server=/nazo.fun/114.114.114.114
 server=/nb-bailing.com/114.114.114.114
+server=/nb-jf.com/114.114.114.114
 server=/nb-medicalsystem.com/114.114.114.114
 server=/nb0817.com/114.114.114.114
 server=/nb301.xyz/114.114.114.114
