accelerated-domains: add yapp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96649,6 +96649,7 @@ server=/yaozhizhu.com/114.114.114.114
 server=/yaozs.com/114.114.114.114
 server=/yaozui.com/114.114.114.114
 server=/yapodong.com/114.114.114.114
+server=/yapp.com/114.114.114.114
 server=/yaqilian.com/114.114.114.114
 server=/yaqjyj.com/114.114.114.114
 server=/yaranfushi.com/114.114.114.114
