accelerated-domains: add hantev.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40459,6 +40459,7 @@ server=/hantang59.com/114.114.114.114
 server=/hantangxintong.com/114.114.114.114
 server=/hantecables.com/114.114.114.114
 server=/hanterry.com/114.114.114.114
+server=/hantev.com/114.114.114.114
 server=/hantinghotels.com/114.114.114.114
 server=/hantongrc.com/114.114.114.114
 server=/hantongsteel.com/114.114.114.114
