accelerated-domains: add dongfeng-honda.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27529,6 +27529,7 @@ server=/dongfangsecai.com/114.114.114.114
 server=/dongfangtech.net/114.114.114.114
 server=/dongfangzi.cafe/114.114.114.114
 server=/dongfeng-honda-ur-v.com/114.114.114.114
+server=/dongfeng-honda.com/114.114.114.114
 server=/dongfeng-nissan.com/114.114.114.114
 server=/dongfeng.net/114.114.114.114
 server=/dongfengem.com/114.114.114.114
