--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12380,6 +12380,7 @@ server=/autismjumpstart.org/114.114.114.114
 server=/auto-ccpit.org/114.114.114.114
 server=/auto-changchun.com/114.114.114.114
 server=/auto-ekontrol.com/114.114.114.114
+server=/auto-expos.com/114.114.114.114
 server=/auto-learning.com/114.114.114.114
 server=/auto-made.com/114.114.114.114
 server=/auto-mooc.com/114.114.114.114
