--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24120,6 +24120,7 @@ server=/ctbpsp.com/114.114.114.114
 server=/ctbyq.net/114.114.114.114
 server=/ctc.lol/114.114.114.114
 server=/ctc100.com/114.114.114.114
+server=/ctcai.com/114.114.114.114
 server=/ctcdn.com/114.114.114.114
 server=/ctcefive.com/114.114.114.114
 server=/ctcloudmeeting.com/114.114.114.114
