accelerated-domains: add enovatemotors.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30036,6 +30036,7 @@ server=/ennobay.com/114.114.114.114
 server=/ennpet.com/114.114.114.114
 server=/ennpower.com/114.114.114.114
 server=/ennresearch.com/114.114.114.114
+server=/enovatemotors.com/114.114.114.114
 server=/enoya.com/114.114.114.114
 server=/enpapers.com/114.114.114.114
 server=/enpht.com/114.114.114.114
