--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41139,6 +41139,7 @@ server=/hbpryy.com/114.114.114.114
 server=/hbptzsbw.com/114.114.114.114
 server=/hbpukang.com/114.114.114.114
 server=/hbpx.net/114.114.114.114
+server=/hbqcxy.com/114.114.114.114
 server=/hbqmys.com/114.114.114.114
 server=/hbqnb.com/114.114.114.114
 server=/hbqtgg.com/114.114.114.114
