--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52491,6 +52491,7 @@ server=/jtn.com/114.114.114.114
 server=/jtnlk.com/114.114.114.114
 server=/jtnsh.com/114.114.114.114
 server=/jtpipeline.com/114.114.114.114
+server=/jtrauto.com/114.114.114.114
 server=/jtrhc.fun/114.114.114.114
 server=/jtrobots.com/114.114.114.114
 server=/jtsglawyers.com/114.114.114.114
