--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53934,6 +53934,7 @@ server=/kedabai.com/114.114.114.114
 server=/kedacom.com/114.114.114.114
 server=/kedang.net/114.114.114.114
 server=/kedaotech.com/114.114.114.114
+server=/kede-auto.com/114.114.114.114
 server=/kede.com/114.114.114.114
 server=/kedefamen.com/114.114.114.114
 server=/kedi.cc/114.114.114.114
