--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17769,6 +17769,7 @@ server=/carivisa.com/114.114.114.114
 server=/carking001.com/114.114.114.114
 server=/carlinkin.com/114.114.114.114
 server=/carmov.com/114.114.114.114
+server=/carmucn.com/114.114.114.114
 server=/carnegiebj.com/114.114.114.114
 server=/carnoc.com/114.114.114.114
 server=/carodpiano.com/114.114.114.114
