accelerated-domains: add hinocn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42539,6 +42539,7 @@ server=/hinabian.com/114.114.114.114
 server=/hinavi.net/114.114.114.114
 server=/hindlish.com/114.114.114.114
 server=/hingecloud.com/114.114.114.114
+server=/hinocn.com/114.114.114.114
 server=/hinpy.com/114.114.114.114
 server=/hintsnet.com/114.114.114.114
 server=/hiofd.com/114.114.114.114
