accelerated-domains: add changjiuqiche.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19195,6 +19195,7 @@ server=/changjiangtimes.com/114.114.114.114
 server=/changjianxy.com/114.114.114.114
 server=/changjingtong.com/114.114.114.114
 server=/changjiulogistics.com/114.114.114.114
+server=/changjiuqiche.com/114.114.114.114
 server=/changker.com/114.114.114.114
 server=/changkezhe.com/114.114.114.114
 server=/changlihui.com/114.114.114.114
