--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20153,6 +20153,7 @@ server=/chinaerospace.com/114.114.114.114
 server=/chinaesf.net/114.114.114.114
 server=/chinaesm.com/114.114.114.114
 server=/chinaet.net/114.114.114.114
+server=/chinaev100.com/114.114.114.114
 server=/chinaexam.org/114.114.114.114
 server=/chinaexpo365.com/114.114.114.114
 server=/chinaexpressair.com/114.114.114.114
