accelerated-domains: add amphenol-auto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11085,6 +11085,7 @@ server=/amoydxmed.com/114.114.114.114
 server=/amp-intl.com/114.114.114.114
 server=/ampcn.com/114.114.114.114
 server=/amperobots.com/114.114.114.114
+server=/amphenol-auto.com/114.114.114.114
 server=/amphenol-jet.com/114.114.114.114
 server=/amplesky.com/114.114.114.114
 server=/amplly.com/114.114.114.114
