--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19649,6 +19649,7 @@ server=/chenzusheng.com/114.114.114.114
 server=/cheonhyeong.com/114.114.114.114
 server=/cheoo.com/114.114.114.114
 server=/cheoz.com/114.114.114.114
+server=/cherentec.com/114.114.114.114
 server=/chervonauto.com/114.114.114.114
 server=/chervongroup.com/114.114.114.114
 server=/cheryholding.com/114.114.114.114
