--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73309,6 +73309,7 @@ server=/risfond.com/114.114.114.114
 server=/rishiqing.com/114.114.114.114
 server=/rishuncn.com/114.114.114.114
 server=/rising-eo.com/114.114.114.114
+server=/risingauto.com/114.114.114.114
 server=/risingpenny.com/114.114.114.114
 server=/riskbird.com/114.114.114.114
 server=/riskivy.com/114.114.114.114
