--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33077,6 +33077,7 @@ server=/fuiou.com/114.114.114.114
 server=/fuioupay.com/114.114.114.114
 server=/fujfu.com/114.114.114.114
 server=/fujiabin.com/114.114.114.114
+server=/fujianbenz.com/114.114.114.114
 server=/fujiangames.com/114.114.114.114
 server=/fujianmei.com/114.114.114.114
 server=/fujianrc.com/114.114.114.114
