--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15097,6 +15097,7 @@ server=/bitcongress.com/114.114.114.114
 server=/bitcron.com/114.114.114.114
 server=/bitdefender-cn.com/114.114.114.114
 server=/biteabc.com/114.114.114.114
+server=/bitech-automotive-wuhu.com/114.114.114.114
 server=/bitecoin.com/114.114.114.114
 server=/biteedu.com/114.114.114.114
 server=/bitekou.com/114.114.114.114
