--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20046,6 +20046,7 @@ server=/chinacache.net/114.114.114.114
 server=/chinacaj.net/114.114.114.114
 server=/chinacamel.com/114.114.114.114
 server=/chinacampus.org/114.114.114.114
+server=/chinacapac.com/114.114.114.114
 server=/chinacarbide.com/114.114.114.114
 server=/chinacasa.org/114.114.114.114
 server=/chinacatel.com/114.114.114.114
