accelerated-domains: add feidi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31582,6 +31582,7 @@ server=/feidavalve.com/114.114.114.114
 server=/feidazuanji.com/114.114.114.114
 server=/feidee.com/114.114.114.114
 server=/feidee.net/114.114.114.114
+server=/feidi.com/114.114.114.114
 server=/feidou.com/114.114.114.114
 server=/feie.work/114.114.114.114
 server=/feierlaiedu.com/114.114.114.114
