accelerated-domains: add globalnevs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35398,6 +35398,7 @@ server=/globalimporter.net/114.114.114.114
 server=/globaliot-summit.com/114.114.114.114
 server=/globalizex.com/114.114.114.114
 server=/globalmil.com/114.114.114.114
+server=/globalnevs.com/114.114.114.114
 server=/globalpingbao.com/114.114.114.114
 server=/globalscanner.com/114.114.114.114
 #server=/globalsign.com/114.114.114.114 # Disabled: very unstable
