accelerated-domains: add daihing.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24993,6 +24993,7 @@ server=/daigege.com/114.114.114.114
 server=/daigou.com/114.114.114.114
 server=/daiguaji.com/114.114.114.114
 server=/daihaobiao.com/114.114.114.114
+server=/daihing.com/114.114.114.114
 server=/daijuchuang.net/114.114.114.114
 server=/daijun.com/114.114.114.114
 server=/daikandq.com/114.114.114.114
