--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30713,6 +30713,7 @@ server=/expresscompanynetwork.com/114.114.114.114
 server=/expreview.com/114.114.114.114
 server=/exprun.com/114.114.114.114
 server=/expsky.com/114.114.114.114
+server=/exquisite-automotive.com/114.114.114.114
 server=/exsvc.net/114.114.114.114
 server=/ext2fsd.com/114.114.114.114
 server=/extbrand.com/114.114.114.114
