--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78741,6 +78741,7 @@ server=/smart.com/114.114.114.114
 server=/smart365ol.com/114.114.114.114
 server=/smartautoclub.com/114.114.114.114
 server=/smartbgp.com/114.114.114.114
+server=/smartcar.zone/114.114.114.114
 server=/smartcarrace.com/114.114.114.114
 server=/smartchn.com/114.114.114.114
 server=/smartcity.team/114.114.114.114
