--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70643,6 +70643,7 @@ server=/qichangv.com/114.114.114.114
 server=/qichecailiao.com/114.114.114.114
 server=/qichechaoren.com/114.114.114.114
 server=/qichedaquan.com/114.114.114.114
+server=/qicheedu.com/114.114.114.114
 server=/qichegeyin.com/114.114.114.114
 server=/qichehot.com/114.114.114.114
 server=/qichemen.com/114.114.114.114
