accelerated-domains: add so.car

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79023,6 +79023,7 @@ server=/snyu.com/114.114.114.114
 server=/snzfj.net/114.114.114.114
 server=/snzhny.com/114.114.114.114
 server=/snzhz.com/114.114.114.114
+server=/so.car/114.114.114.114
 server=/so.com/114.114.114.114
 server=/so03290koaq.com/114.114.114.114
 server=/so126.com/114.114.114.114
