--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49448,6 +49448,7 @@ server=/jdcmmc.com/114.114.114.114
 server=/jdcmoly.com/114.114.114.114
 server=/jdcontent.com/114.114.114.114
 server=/jdcq.net/114.114.114.114
+server=/jdcsww.com/114.114.114.114
 server=/jdctky.com/114.114.114.114
 server=/jdd-global.com/114.114.114.114
 server=/jdd-hub.com/114.114.114.114
