--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59631,6 +59631,7 @@ server=/lypdl.com/114.114.114.114
 server=/lyplay.net/114.114.114.114
 server=/lyps.net/114.114.114.114
 server=/lypyxx.com/114.114.114.114
+server=/lyqgm.com/114.114.114.114
 server=/lyrc.cc/114.114.114.114
 server=/lyreqiqiu.com/114.114.114.114
 server=/lyric-robot.com/114.114.114.114
