--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64364,6 +64364,7 @@ server=/nealee.com/114.114.114.114
 server=/nearcharge.com/114.114.114.114
 server=/nearsnet.com/114.114.114.114
 server=/nease.net/114.114.114.114
+server=/neashow.com/114.114.114.114
 server=/neat-reader.com/114.114.114.114
 server=/neatifyapp.com/114.114.114.114
 server=/nebulogy.com/114.114.114.114
