accelerated-domains: add engley.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30002,6 +30002,7 @@ server=/eng24.com/114.114.114.114
 server=/engdungjdg.com/114.114.114.114
 server=/engdvd.com/114.114.114.114
 server=/engeniustec.com/114.114.114.114
+server=/engley.com/114.114.114.114
 server=/english163.com/114.114.114.114
 server=/englishdict.cc/114.114.114.114
 server=/englishmasterclub.com/114.114.114.114
