--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58550,6 +58550,7 @@ server=/longfu360.com/114.114.114.114
 server=/longguanjia.so/114.114.114.114
 server=/longhan.cc/114.114.114.114
 server=/longhoo.net/114.114.114.114
+server=/longhorn-auto.com/114.114.114.114
 server=/longhu.net/114.114.114.114
 server=/longhua.net/114.114.114.114
 server=/longhufengyun.com/114.114.114.114
