accelerated-domains: add reachauto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72833,6 +72833,7 @@ server=/rdzy.net/114.114.114.114
 server=/re25.vip/114.114.114.114
 server=/reabam.com/114.114.114.114
 server=/reachace.com/114.114.114.114
+server=/reachauto.com/114.114.114.114
 server=/reachsh.com/114.114.114.114
 server=/reachtone.com/114.114.114.114
 server=/reachwin.net/114.114.114.114
