--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23372,6 +23372,7 @@ server=/cpatrk.net/114.114.114.114
 server=/cpbao.com/114.114.114.114
 server=/cpc.cc/114.114.114.114
 server=/cpcaauto.com/114.114.114.114
+server=/cpcadata.com/114.114.114.114
 server=/cpcccac.com/114.114.114.114
 server=/cpcell.com/114.114.114.114
 server=/cpcep.com/114.114.114.114
