accelerated-domains: add cartech8.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17782,6 +17782,7 @@ server=/carrotchou.blog/114.114.114.114
 server=/carrotchou.com/114.114.114.114
 server=/cars001.com/114.114.114.114
 server=/cart-med.com/114.114.114.114
+server=/cartech8.com/114.114.114.114
 server=/carthane.com/114.114.114.114
 server=/cartimen.com/114.114.114.114
 server=/cartoonwin.com/114.114.114.114
