--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75794,6 +75794,7 @@ server=/sg91.net/114.114.114.114
 server=/sg92.com/114.114.114.114
 server=/sgad.site/114.114.114.114
 server=/sgamer.com/114.114.114.114
+server=/sgautomotive.com/114.114.114.114
 server=/sgccdn.com/114.114.114.114
 server=/sgcctd.com/114.114.114.114
 server=/sgcctop.com/114.114.114.114
