--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76080,6 +76080,7 @@ server=/shanghai369.com/114.114.114.114
 server=/shanghai4989.net/114.114.114.114
 server=/shanghaiairport.com/114.114.114.114
 server=/shanghaiairporttour.com/114.114.114.114
+server=/shanghaiata.com/114.114.114.114
 server=/shanghaibaokai.com/114.114.114.114
 server=/shanghaicaiyi.com/114.114.114.114
 server=/shanghaicg.net/114.114.114.114
