--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84771,6 +84771,7 @@ server=/triggerdelivery.com/114.114.114.114
 server=/trimmoits.com/114.114.114.114
 server=/trinasolar.com/114.114.114.114
 server=/trinitigame.com/114.114.114.114
+server=/trinova-tech.com/114.114.114.114
 server=/trioisobardev.com/114.114.114.114
 server=/triopen.com/114.114.114.114
 server=/trip169.com/114.114.114.114
