accelerated-domains: add ieevchina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46960,6 +46960,7 @@ server=/ieeepower.com/114.114.114.114
 server=/ieeewifi.com/114.114.114.114
 server=/ieeod0.com/114.114.114.114
 server=/ieepa.org/114.114.114.114
+server=/ieevchina.com/114.114.114.114
 server=/iefang.com/114.114.114.114
 server=/iefans.net/114.114.114.114
 server=/ieforever.com/114.114.114.114
