--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73661,6 +73661,7 @@ server=/rovelskys.com/114.114.114.114
 server=/rowa.com/114.114.114.114
 server=/rowcan.com/114.114.114.114
 server=/roxinq.com/114.114.114.114
+server=/roxmotor.com/114.114.114.114
 server=/royalym.com/114.114.114.114
 server=/royole.com/114.114.114.114
 server=/royotech.com/114.114.114.114
