accelerated-domains: add cnfrey.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22338,6 +22338,7 @@ server=/cnfpc.com/114.114.114.114
 server=/cnfpzz.com/114.114.114.114
 server=/cnfq.com/114.114.114.114
 server=/cnfrag.com/114.114.114.114
+server=/cnfrey.com/114.114.114.114
 server=/cnfrp.com/114.114.114.114
 server=/cnfrp.net/114.114.114.114
 server=/cnfruit.com/114.114.114.114
