accelerated-domains: add hunangy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45190,6 +45190,7 @@ server=/huming.com/114.114.114.114
 server=/hummcars.com/114.114.114.114
 server=/hunanbestall.com/114.114.114.114
 server=/hunancatv.com/114.114.114.114
+server=/hunangy.com/114.114.114.114
 server=/hunaniptv.com/114.114.114.114
 server=/hunanliantong.com/114.114.114.114
 server=/hunanpea.com/114.114.114.114
