--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33834,6 +33834,7 @@ server=/gaodugj.com/114.114.114.114
 server=/gaoduguoji.com/114.114.114.114
 server=/gaodun.com/114.114.114.114
 server=/gaodunwangxiao.com/114.114.114.114
+server=/gaofacable.com/114.114.114.114
 server=/gaofang.cloud/114.114.114.114
 server=/gaofangcache.com/114.114.114.114
 server=/gaofangm.com/114.114.114.114
