--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93739,6 +93739,7 @@ server=/xingbo.tv/114.114.114.114
 server=/xingchao1.com/114.114.114.114
 server=/xingchenjia.com/114.114.114.114
 server=/xingcheshixian.com/114.114.114.114
+server=/xingchiauto.com/114.114.114.114
 server=/xingchuangcar.com/114.114.114.114
 server=/xingchuangtiandi.com/114.114.114.114
 server=/xingdajt.com/114.114.114.114
