--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11827,6 +11827,7 @@ server=/aprvoice.com/114.114.114.114
 server=/apsdai.com/114.114.114.114
 server=/apsfon.com/114.114.114.114
 server=/apsgo.com/114.114.114.114
+server=/apsoto.com/114.114.114.114
 server=/aptchina.com/114.114.114.114
 server=/aptchip.com/114.114.114.114
 server=/aptenon.com/114.114.114.114
