--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24849,6 +24849,7 @@ server=/daanche.com/114.114.114.114
 server=/daangene.com/114.114.114.114
 server=/daanjiexi.com/114.114.114.114
 server=/daanwo.com/114.114.114.114
+server=/daas-auto.com/114.114.114.114
 server=/daba.com/114.114.114.114
 server=/dabaicai.com/114.114.114.114
 server=/dabaicai.org/114.114.114.114
