accelerated-domains: add sdwfvc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75325,6 +75325,7 @@ server=/sdwdxl.com/114.114.114.114
 server=/sdwen.com/114.114.114.114
 server=/sdwenlian.com/114.114.114.114
 server=/sdwenlv.com/114.114.114.114
+server=/sdwfvc.com/114.114.114.114
 server=/sdwgyy.com/114.114.114.114
 server=/sdwlsym.com/114.114.114.114
 server=/sdwscgs.com/114.114.114.114
