accelerated-domains: add shineray-motors.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76952,6 +76952,7 @@ server=/shinechina.com/114.114.114.114
 server=/shinefeel.com/114.114.114.114
 server=/shinelon.com/114.114.114.114
 server=/shineoptics.com/114.114.114.114
+server=/shineray-motors.com/114.114.114.114
 server=/shinerayad.com/114.114.114.114
 server=/shinetsu.shop/114.114.114.114
 server=/shineu.com/114.114.114.114
