--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68896,6 +68896,7 @@ server=/piscesys.com/114.114.114.114
 server=/pisx.com/114.114.114.114
 server=/pitayaio.com/114.114.114.114
 server=/piuqiupia.com/114.114.114.114
+server=/pivotautomotive.com/114.114.114.114
 server=/pixbe.com/114.114.114.114
 server=/pixcakeai.com/114.114.114.114
 server=/pixcakes.com/114.114.114.114
