--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14315,6 +14315,7 @@ server=/berylbot.com/114.114.114.114
 server=/beryt111.fun/114.114.114.114
 server=/bes.ren/114.114.114.114
 server=/besbranding.com/114.114.114.114
+server=/bescar.com/114.114.114.114
 server=/beschannels.com/114.114.114.114
 server=/bescity.com/114.114.114.114
 server=/bescloud.com/114.114.114.114
