accelerated-domains: add ciaie.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21171,6 +21171,7 @@ server=/ci-ele.com/114.114.114.114
 server=/ci123.com/114.114.114.114
 server=/ci2.lat/114.114.114.114
 server=/ci800.com/114.114.114.114
+server=/ciaie.com/114.114.114.114
 server=/ciallo.cc/114.114.114.114
 server=/ciaoca.com/114.114.114.114
 server=/ciarn.com/114.114.114.114
