accelerated-domains: add szjsjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81573,6 +81573,7 @@ server=/szjkyun.com/114.114.114.114
 server=/szjlfck.com/114.114.114.114
 server=/szjlkt.com/114.114.114.114
 server=/szjlwul.com/114.114.114.114
+server=/szjsjt.com/114.114.114.114
 server=/szjtfw.com/114.114.114.114
 server=/szjtxm.com/114.114.114.114
 server=/szjuhaozn.com/114.114.114.114
