accelerated-domains: add cheryjaguarlandrover.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19658,6 +19658,7 @@ server=/cherentec.com/114.114.114.114
 server=/chervonauto.com/114.114.114.114
 server=/chervongroup.com/114.114.114.114
 server=/cheryholding.com/114.114.114.114
+server=/cheryjaguarlandrover.com/114.114.114.114
 server=/cherylalopes.com/114.114.114.114
 server=/cherymanuals.com/114.114.114.114
 server=/cheshenghuo.com/114.114.114.114
