accelerated-domains: add baoneng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13517,6 +13517,7 @@ server=/baoming.work/114.114.114.114
 server=/baomingge.com/114.114.114.114
 server=/baomitu.com/114.114.114.114
 server=/baomtx.com/114.114.114.114
+server=/baoneng.com/114.114.114.114
 server=/baoqin.com/114.114.114.114
 server=/baoqingvip.com/114.114.114.114
 server=/baoruan.com/114.114.114.114
