accelerated-domains: add levcauto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56884,6 +56884,7 @@ server=/letwind.com/114.114.114.114
 server=/letwx.com/114.114.114.114
 server=/letyo.com/114.114.114.114
 server=/leuok.com/114.114.114.114
+server=/levcauto.com/114.114.114.114
 server=/levect.com/114.114.114.114
 server=/level8cases.com/114.114.114.114
 server=/levelinfinite.com/114.114.114.114
