accelerated-domains: add rachina.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72616,6 +72616,7 @@ server=/rabschina.com/114.114.114.114
 server=/race604.com/114.114.114.114
 server=/racent.com/114.114.114.114
 server=/racetigertiming.com/114.114.114.114
+server=/rachina.org/114.114.114.114
 server=/racing-china.com/114.114.114.114
 server=/racktray.com/114.114.114.114
 server=/racpro.net/114.114.114.114
