--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53584,6 +53584,7 @@ server=/kalegou.com/114.114.114.114
 server=/kalifang.com/114.114.114.114
 server=/kalugaqueen.com/114.114.114.114
 server=/kaluli.com/114.114.114.114
+server=/kamaqc.com/114.114.114.114
 server=/kamenwang.com/114.114.114.114
 server=/kami.vip/114.114.114.114
 server=/kami5.com/114.114.114.114
