--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81730,6 +81730,7 @@ server=/szqsq.com/114.114.114.114
 server=/szqt.net/114.114.114.114
 server=/szquanli.com/114.114.114.114
 server=/szqushi.com/114.114.114.114
+server=/szqycl.com/114.114.114.114
 server=/szqyw.net/114.114.114.114
 server=/szqzsd.com/114.114.114.114
 server=/szrcfw.com/114.114.114.114
