accelerated-domains: add cyberspace.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24527,6 +24527,7 @@ server=/cyanhillcapital.com/114.114.114.114
 server=/cyb-bot.com/114.114.114.114
 server=/cyb800.com/114.114.114.114
 server=/cybaojian.com/114.114.114.114
+server=/cyberspace.com/114.114.114.114
 server=/cybertogether.net/114.114.114.114
 server=/cyberv.shop/114.114.114.114
 server=/cyberway-china.net/114.114.114.114
