--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84740,6 +84740,7 @@ server=/transfun.net/114.114.114.114
 server=/translatal.com/114.114.114.114
 server=/translatego.net/114.114.114.114
 server=/translationchina.com/114.114.114.114
+server=/transmission-china.org/114.114.114.114
 server=/transmonkey.com/114.114.114.114
 server=/transmonkey.net/114.114.114.114
 server=/transn.com/114.114.114.114
