accelerated-domains: add oulongauto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67542,6 +67542,7 @@ server=/ouklqd.com/114.114.114.114
 server=/oukyx.com/114.114.114.114
 server=/oulagongshi.com/114.114.114.114
 server=/ouliwang.com/114.114.114.114
+server=/oulongauto.com/114.114.114.114
 server=/ouluwind.com/114.114.114.114
 server=/oulvnet.com/114.114.114.114
 server=/oumakspt.com/114.114.114.114
