accelerated-domains: add cnlaunch.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22522,6 +22522,7 @@ server=/cnlampholder.com/114.114.114.114
 server=/cnlandfill.net/114.114.114.114
 server=/cnlang.org/114.114.114.114
 server=/cnlanling.com/114.114.114.114
+server=/cnlaunch.com/114.114.114.114
 server=/cnlaw.net/114.114.114.114
 server=/cnlawweb.net/114.114.114.114
 server=/cnldzc.com/114.114.114.114
