--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46613,6 +46613,7 @@ server=/ichanfeng.com/114.114.114.114
 server=/ichang8.com/114.114.114.114
 server=/ichangtou.com/114.114.114.114
 server=/ichanyu.com/114.114.114.114
+server=/ichaoqi.com/114.114.114.114
 server=/ichaoshangyue.com/114.114.114.114
 server=/ichaotao.com/114.114.114.114
 server=/ichaotu.com/114.114.114.114
