accelerated-domains: add livanauto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58061,6 +58061,7 @@ server=/liuzitang.com/114.114.114.114
 server=/liuziyoudu.com/114.114.114.114
 server=/liuzongyang.com/114.114.114.114
 server=/liuzy88.com/114.114.114.114
+server=/livanauto.com/114.114.114.114
 server=/live-era.com/114.114.114.114
 server=/live-voip.com/114.114.114.114
 server=/live123.cc/114.114.114.114
