accelerated-domains: add wanxiangauto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88538,6 +88538,7 @@ server=/wanwusc.com/114.114.114.114
 server=/wanwushuo.com/114.114.114.114
 server=/wanwuxia.com/114.114.114.114
 server=/wanwuzhinan.com/114.114.114.114
+server=/wanxiangauto.com/114.114.114.114
 server=/wanxiangqihang.com/114.114.114.114
 server=/wanxiangshu.com/114.114.114.114
 server=/wanxiangyouxian.com/114.114.114.114
