--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63635,6 +63635,7 @@ server=/myjoy777.com/114.114.114.114
 server=/myjql.com/114.114.114.114
 server=/myjujing.com/114.114.114.114
 server=/myk3.com/114.114.114.114
+server=/mykarry.com/114.114.114.114
 server=/mykeeta.com/114.114.114.114
 server=/mykqyy.com/114.114.114.114
 server=/mykscdn.com/114.114.114.114
