accelerated-domains: add fawmc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31362,6 +31362,7 @@ server=/faw-vw.com/114.114.114.114
 server=/faw.com/114.114.114.114
 server=/fawan.com/114.114.114.114
 server=/faway.com/114.114.114.114
+server=/fawmc.com/114.114.114.114
 server=/fawsoft.com/114.114.114.114
 server=/fawulu.com/114.114.114.114
 server=/fax52.com/114.114.114.114
