accelerated-domains: add miracomotor.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62170,6 +62170,7 @@ server=/miracleplus.com/114.114.114.114
 server=/miraclevision.com/114.114.114.114
 server=/miraclevision.net/114.114.114.114
 server=/miraclewallpaper.com/114.114.114.114
+server=/miracomotor.com/114.114.114.114
 server=/miratama.com/114.114.114.114
 server=/miravia.es/114.114.114.114
 server=/miredian.com/114.114.114.114
