accelerated-domains: add qi-auto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70451,6 +70451,7 @@ server=/qhyimin.com/114.114.114.114
 server=/qhylns.com/114.114.114.114
 server=/qhytyyvx.com/114.114.114.114
 server=/qhyzzzs.com/114.114.114.114
+server=/qi-auto.com/114.114.114.114
 server=/qi-che.com/114.114.114.114
 server=/qi-ju.com/114.114.114.114
 server=/qi-wen.com/114.114.114.114
