accelerated-domains: add xiaohufev.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93144,6 +93144,7 @@ server=/xiaohuabuluo.com/114.114.114.114
 server=/xiaohuai.com/114.114.114.114
 server=/xiaohuangji.com/114.114.114.114
 server=/xiaohucloud.com/114.114.114.114
+server=/xiaohufev.com/114.114.114.114
 server=/xiaohulu.com/114.114.114.114
 server=/xiaohun.net/114.114.114.114
 server=/xiaohuochai.cc/114.114.114.114
