--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89440,6 +89440,7 @@ server=/wenday.com/114.114.114.114
 server=/wendian.com/114.114.114.114
 server=/wendns.com/114.114.114.114
 server=/wendoc.com/114.114.114.114
+server=/wendougee.com/114.114.114.114
 server=/wendu.com/114.114.114.114
 server=/wenduedu.com/114.114.114.114
 server=/wendumao.com/114.114.114.114
