--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15921,6 +15921,7 @@ server=/bluestar-pc.com/114.114.114.114
 server=/bluestep.cc/114.114.114.114
 server=/bluetime.com/114.114.114.114
 server=/bluewhaleremote.com/114.114.114.114
+server=/bluezz.net/114.114.114.114
 server=/blw.moe/114.114.114.114
 server=/blwire.com/114.114.114.114
 server=/blxfc.com/114.114.114.114
