accelerated-domains: add hnzjj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43331,6 +43331,7 @@ server=/hnzhouyi.com/114.114.114.114
 server=/hnzhy.com/114.114.114.114
 server=/hnzjdc.com/114.114.114.114
 server=/hnzjip.com/114.114.114.114
+server=/hnzjj.com/114.114.114.114
 server=/hnzjyl.com/114.114.114.114
 server=/hnzkclouds.com/114.114.114.114
 server=/hnzkhbsb.com/114.114.114.114
