accelerated-domains: add hnhtdg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43114,6 +43114,7 @@ server=/hnhnled.com/114.114.114.114
 server=/hnhp.com/114.114.114.114
 server=/hnhrsw.com/114.114.114.114
 server=/hnhsjt.com/114.114.114.114
+server=/hnhtdg.com/114.114.114.114
 server=/hnhxin.com/114.114.114.114
 server=/hnhxs.com/114.114.114.114
 server=/hnhxxk.com/114.114.114.114
