accelerated-domains: add jiyuantour.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51241,6 +51241,7 @@ server=/jiyou-tech.com/114.114.114.114
 server=/jiyoujia.com/114.114.114.114
 server=/jiyouwang.com/114.114.114.114
 server=/jiyuanfangchan.com/114.114.114.114
+server=/jiyuantour.com/114.114.114.114
 server=/jiyue-auto.com/114.114.114.114
 server=/jiyuncn.com/114.114.114.114
 server=/jiyunhudong.com/114.114.114.114
