accelerated-domains: add abatour.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9139,6 +9139,7 @@ server=/abacaipu.com/114.114.114.114
 server=/abackup.com/114.114.114.114
 server=/abaizx.com/114.114.114.114
 server=/abardeen-online.com/114.114.114.114
+server=/abatour.com/114.114.114.114
 server=/abbbio.com/114.114.114.114
 server=/abbkine.com/114.114.114.114
 server=/abbooa.com/114.114.114.114
