accelerated-domains: add earthdq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29001,6 +29001,7 @@ server=/eap2.net/114.114.114.114
 server=/eapchina.net/114.114.114.114
 server=/earth-science.net/114.114.114.114
 server=/earth2037.com/114.114.114.114
+server=/earthdq.com/114.114.114.114
 server=/earthedu.com/114.114.114.114
 server=/earthstar-cloud.com/114.114.114.114
 server=/earture.org/114.114.114.114
