--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22757,6 +22757,7 @@ server=/cntapp.com/114.114.114.114
 server=/cnteno.com/114.114.114.114
 server=/cntexjob.com/114.114.114.114
 server=/cntexnet.com/114.114.114.114
+server=/cntgol.com/114.114.114.114
 server=/cntheory.com/114.114.114.114
 server=/cnthinkers.com/114.114.114.114
 server=/cntingyun.com/114.114.114.114
