--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24717,6 +24717,7 @@ server=/czkctl.com/114.114.114.114
 server=/czkingdee.com/114.114.114.114
 server=/czlingke.com/114.114.114.114
 server=/czlkgy.com/114.114.114.114
+server=/czlsgz.com/114.114.114.114
 server=/czlskj.com/114.114.114.114
 server=/czlxgc.net/114.114.114.114
 server=/czmarathon.net/114.114.114.114
