--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76002,6 +76002,7 @@ server=/shaangu.com/114.114.114.114
 server=/shaanxi56.com/114.114.114.114
 server=/shaanxiiot.com/114.114.114.114
 server=/shaanxirk.com/114.114.114.114
+server=/shaanxita.com/114.114.114.114
 server=/shaanyaosy.com/114.114.114.114
 server=/shabc.com/114.114.114.114
 server=/shabc.net/114.114.114.114
