accelerated-domains: add kptour.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54885,6 +54885,7 @@ server=/kpoll.net/114.114.114.114
 server=/kppcsem.com/114.114.114.114
 server=/kprepublic.com/114.114.114.114
 server=/kpt5.com/114.114.114.114
+server=/kptour.com/114.114.114.114
 server=/kpwcmb.com/114.114.114.114
 server=/kpzip.com/114.114.114.114
 server=/kpzip.net/114.114.114.114
