accelerated-domains: add bmtrip.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15988,6 +15988,7 @@ server=/bmrtjt.com/114.114.114.114
 server=/bms16.com/114.114.114.114
 server=/bmser.com/114.114.114.114
 server=/bmshow.com/114.114.114.114
+server=/bmtrip.com/114.114.114.114
 server=/bmvps.com/114.114.114.114
 server=/bmw8033.com/114.114.114.114
 server=/bmwallpaper.com/114.114.114.114
