--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56874,6 +56874,7 @@ server=/letianshanec.com/114.114.114.114
 server=/letim-auto.com/114.114.114.114
 server=/letinet.com/114.114.114.114
 server=/leting.io/114.114.114.114
+server=/letoour.com/114.114.114.114
 server=/letotur.com/114.114.114.114
 server=/letou8.com/114.114.114.114
 server=/letoursport.com/114.114.114.114
