accelerated-domains: add zhizhuyule.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102803,6 +102803,7 @@ server=/zhizhu35.net/114.114.114.114
 server=/zhizhucms.com/114.114.114.114
 server=/zhizhuma.com/114.114.114.114
 server=/zhizhuwu.com/114.114.114.114
+server=/zhizhuyule.com/114.114.114.114
 server=/zhizhuyx.com/114.114.114.114
 server=/zhizihuan.com/114.114.114.114
 server=/zhizihuan.net/114.114.114.114
