accelerated-domains: add jingqu.wang

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50704,6 +50704,7 @@ server=/jingpinhui.com/114.114.114.114
 server=/jingpinke.com/114.114.114.114
 server=/jingpt.com/114.114.114.114
 server=/jingqizhitongche.com/114.114.114.114
+server=/jingqu.wang/114.114.114.114
 server=/jingrongshuan.com/114.114.114.114
 server=/jingruigroup.com/114.114.114.114
 server=/jingsailian.com/114.114.114.114
