accelerated-domains: add tongchengir.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84253,6 +84253,7 @@ server=/tongcheng.cc/114.114.114.114
 server=/tongcheng360.com/114.114.114.114
 server=/tongchengbx.com/114.114.114.114
 server=/tongchengchaku.com/114.114.114.114
+server=/tongchengir.com/114.114.114.114
 server=/tongchengkang.com/114.114.114.114
 server=/tongchengqun.vip/114.114.114.114
 server=/tongchouba.com/114.114.114.114
