accelerated-domains: add dtxxjq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28207,6 +28207,7 @@ server=/dtxmw.com/114.114.114.114
 server=/dtxn.net/114.114.114.114
 server=/dtxww.com/114.114.114.114
 server=/dtxxhh.com/114.114.114.114
+server=/dtxxjq.com/114.114.114.114
 server=/dtyhgj.com/114.114.114.114
 server=/dtysky.moe/114.114.114.114
 server=/dtyunxi.com/114.114.114.114
