--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32247,6 +32247,7 @@ server=/fjlb.com/114.114.114.114
 server=/fjlh.com/114.114.114.114
 server=/fjlszbc.com/114.114.114.114
 server=/fjly.com/114.114.114.114
+server=/fjlygroup.com/114.114.114.114
 server=/fjlyrmyy.com/114.114.114.114
 server=/fjmh.com/114.114.114.114
 server=/fjmlh.com/114.114.114.114
