accelerated-domains: add nmgwhly.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65637,6 +65637,7 @@ server=/nmgonline.com/114.114.114.114
 server=/nmgswkj.com/114.114.114.114
 server=/nmgswtz.com/114.114.114.114
 server=/nmgup.com/114.114.114.114
+server=/nmgwhly.com/114.114.114.114
 server=/nmgwxgs.com/114.114.114.114
 server=/nmgwyw.org/114.114.114.114
 server=/nmgyjszx.com/114.114.114.114
