--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13235,6 +13235,7 @@ server=/baldor-tech.com/114.114.114.114
 server=/bale25.xyz/114.114.114.114
 server=/baletu.com/114.114.114.114
 server=/balift.com/114.114.114.114
+server=/balihe.com/114.114.114.114
 server=/balijieji.com/114.114.114.114
 server=/balimtoy.com/114.114.114.114
 server=/balingtxt.com/114.114.114.114
