accelerated-domains: add ylhfjq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98494,6 +98494,7 @@ server=/ylgs96332.com/114.114.114.114
 server=/ylhakc.com/114.114.114.114
 server=/ylhdgg.com/114.114.114.114
 server=/ylhdsl.com/114.114.114.114
+server=/ylhfjq.com/114.114.114.114
 server=/ylhh.net/114.114.114.114
 server=/ylhhny.com/114.114.114.114
 server=/ylhmgz.com/114.114.114.114
