--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4085,6 +4085,7 @@ server=/3mxxsdz.com/114.114.114.114
 server=/3n1b.com/114.114.114.114
 server=/3nbb.com/114.114.114.114
 server=/3p8801.co/114.114.114.114
+server=/3polar.com/114.114.114.114
 server=/3poo.com/114.114.114.114
 server=/3pw.net/114.114.114.114
 server=/3q2008.com/114.114.114.114
