accelerated-domains: add qjtourism.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71327,6 +71327,7 @@ server=/qjsb88.com/114.114.114.114
 server=/qjslngy.com/114.114.114.114
 server=/qjsmartech.com/114.114.114.114
 server=/qjtjp.com/114.114.114.114
+server=/qjtourism.com/114.114.114.114
 server=/qjwenming.com/114.114.114.114
 server=/qjwh.xyz/114.114.114.114
 server=/qjwhzs.com/114.114.114.114
