accelerated-domains: add jinhutour.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50787,6 +50787,7 @@ server=/jinhuawatch.com/114.114.114.114
 server=/jinhuazhe.com/114.114.114.114
 server=/jinhuo.net/114.114.114.114
 server=/jinhusns.com/114.114.114.114
+server=/jinhutour.com/114.114.114.114
 server=/jinianbi.com/114.114.114.114
 server=/jinianbishequ.com/114.114.114.114
 server=/jiniance8.com/114.114.114.114
