--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59730,6 +59730,7 @@ server=/lyzfgjj.com/114.114.114.114
 server=/lyzggs.com/114.114.114.114
 server=/lyzgs.com/114.114.114.114
 server=/lyzhanlang.com/114.114.114.114
+server=/lyzlzz.com/114.114.114.114
 server=/lyzp100.com/114.114.114.114
 server=/lz-qs.com/114.114.114.114
 server=/lz-redeem.com/114.114.114.114
