--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64091,6 +64091,7 @@ server=/nanrenvip.cc/114.114.114.114
 server=/nanrenwa.com/114.114.114.114
 server=/nanrenwo.net/114.114.114.114
 server=/nanrenzhi.com/114.114.114.114
+server=/nanshanlvyou.com/114.114.114.114
 server=/nanshanski.com/114.114.114.114
 server=/nanshiw.com/114.114.114.114
 server=/nanss.com/114.114.114.114
