accelerated-domains: add pecmgd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68353,6 +68353,7 @@ server=/pebellows.com/114.114.114.114
 server=/pec33.com/114.114.114.114
 server=/peccn.com/114.114.114.114
 server=/pechoin.com/114.114.114.114
+server=/pecmgd.com/114.114.114.114
 server=/pecoo.com/114.114.114.114
 server=/pediy.com/114.114.114.114
 server=/pedli.com/114.114.114.114
