--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48759,6 +48759,7 @@ server=/itqlz.com/114.114.114.114
 server=/itrace.cc/114.114.114.114
 server=/itrid.com/114.114.114.114
 server=/itrip.com/114.114.114.114
+server=/itripsh.com/114.114.114.114
 server=/itrolexshop.com/114.114.114.114
 server=/itruelife.com/114.114.114.114
 server=/itruke.com/114.114.114.114
