--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63976,6 +63976,7 @@ server=/nakevip.com/114.114.114.114
 server=/nakong.com/114.114.114.114
 server=/nalanchuanmei.com/114.114.114.114
 server=/nalanxi.com/114.114.114.114
+server=/nalati.com/114.114.114.114
 server=/nalichi.com/114.114.114.114
 server=/nalook.com/114.114.114.114
 server=/name1688.com/114.114.114.114
