--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96955,6 +96955,7 @@ server=/yclh6.com/114.114.114.114
 server=/ycloud.online/114.114.114.114
 server=/ycloudlb.com/114.114.114.114
 server=/ycloudvip.com/114.114.114.114
+server=/yclyq.com/114.114.114.114
 server=/ycmlaw.com/114.114.114.114
 server=/ycnaxin.com/114.114.114.114
 server=/ycnevpds.com/114.114.114.114
