--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101990,6 +101990,7 @@ server=/zgyssyxh.com/114.114.114.114
 server=/zgysw.cc/114.114.114.114
 server=/zgyxsw.org/114.114.114.114
 server=/zgyygl.com/114.114.114.114
+server=/zgyythy.com/114.114.114.114
 server=/zgyzyq.com/114.114.114.114
 server=/zgzb.com/114.114.114.114
 server=/zgzca.com/114.114.114.114
