accelerated-domains: add hbsxly.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41241,6 +41241,7 @@ server=/hbswkj.com/114.114.114.114
 server=/hbswmyyxgs.com/114.114.114.114
 server=/hbsxkyy.com/114.114.114.114
 server=/hbsxls.com/114.114.114.114
+server=/hbsxly.com/114.114.114.114
 server=/hbsygw.com/114.114.114.114
 server=/hbsz120.com/114.114.114.114
 server=/hbszbykj.com/114.114.114.114
