accelerated-domains: add shtour.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77505,6 +77505,7 @@ server=/shtimessquare.com/114.114.114.114
 server=/shtimg.com/114.114.114.114
 server=/shtion.com/114.114.114.114
 server=/shtopshow.com/114.114.114.114
+server=/shtour.org/114.114.114.114
 server=/shtpin.com/114.114.114.114
 server=/shtqzs.com/114.114.114.114
 server=/shtrhospital.com/114.114.114.114
