--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53081,6 +53081,7 @@ server=/jxldbj.com/114.114.114.114
 server=/jxlgjd.com/114.114.114.114
 server=/jxln.com/114.114.114.114
 server=/jxlpjt.com/114.114.114.114
+server=/jxlsxy.com/114.114.114.114
 server=/jxlvs.com/114.114.114.114
 server=/jxlwgame.com/114.114.114.114
 server=/jxlyhbd.com/114.114.114.114
