accelerated-domains: add tmianyang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84108,6 +84108,7 @@ server=/tmetb.net/114.114.114.114
 server=/tmhkgs.com/114.114.114.114
 server=/tmhong.com/114.114.114.114
 server=/tmhttc.com/114.114.114.114
+server=/tmianyang.com/114.114.114.114
 server=/tmirob.com/114.114.114.114
 server=/tmisp.com/114.114.114.114
 server=/tmjbee.com/114.114.114.114
