--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66788,6 +66788,7 @@ server=/oct-cts.com/114.114.114.114
 server=/octbay.com/114.114.114.114
 server=/octcommercial.com/114.114.114.114
 server=/octeshow.com/114.114.114.114
+server=/octgulou.com/114.114.114.114
 server=/octholding.com/114.114.114.114
 server=/octhotels.com/114.114.114.114
 server=/octinn.com/114.114.114.114
