accelerated-domains: add ewuzhen.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30655,6 +30655,7 @@ server=/ewt360.com/114.114.114.114
 server=/ewteacher.com/114.114.114.114
 server=/ewtp.com/114.114.114.114
 server=/ewtp.org/114.114.114.114
+server=/ewuzhen.com/114.114.114.114
 server=/ex-silver.com/114.114.114.114
 server=/ex-starch.com/114.114.114.114
 server=/ex360.com/114.114.114.114
