accelerated-domains: add joyintour.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51907,6 +51907,7 @@ server=/joying.com/114.114.114.114
 server=/joyingbox.com/114.114.114.114
 server=/joyingtrip.com/114.114.114.114
 server=/joyinpharma.com/114.114.114.114
+server=/joyintour.com/114.114.114.114
 server=/joyinvleah.com/114.114.114.114
 server=/joyj.com/114.114.114.114
 server=/joylawyer.com/114.114.114.114
