accelerated-domains: add xiannvhu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92990,6 +92990,7 @@ server=/xianmeisc.com/114.114.114.114
 server=/xianniu.com/114.114.114.114
 server=/xianniu.net/114.114.114.114
 server=/xianniuzu.com/114.114.114.114
+server=/xiannvhu.com/114.114.114.114
 server=/xianpinyun.com/114.114.114.114
 server=/xianpp.com/114.114.114.114
 server=/xianrail.com/114.114.114.114
