--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36176,6 +36176,7 @@ server=/grafytek.com/114.114.114.114
 server=/grainedu.com/114.114.114.114
 server=/grainstorage.net/114.114.114.114
 server=/grand-tec.com/114.114.114.114
+server=/grandcitytours.com/114.114.114.114
 server=/grandee-elevator.com/114.114.114.114
 server=/grandinsight.com/114.114.114.114
 server=/grandloong.com/114.114.114.114
