--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42323,6 +42323,7 @@ server=/hhh233.net/114.114.114.114
 server=/hhh800.com/114.114.114.114
 server=/hhh885.com/114.114.114.114
 server=/hhhg258.com/114.114.114.114
+server=/hhhkpb.com/114.114.114.114
 server=/hhhoo.com/114.114.114.114
 server=/hhhppp.com/114.114.114.114
 server=/hhhstz.com/114.114.114.114
