accelerated-domains: add anhuicta.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11220,6 +11220,7 @@ server=/anhouse.com/114.114.114.114
 server=/anhuaedu.com/114.114.114.114
 server=/anhuanjia.com/114.114.114.114
 server=/anhui365.net/114.114.114.114
+server=/anhuicta.com/114.114.114.114
 server=/anhuigwy.org/114.114.114.114
 server=/anhuihr.com/114.114.114.114
 server=/anhuilife.com/114.114.114.114
