--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28333,6 +28333,7 @@ server=/dunbaigo.com/114.114.114.114
 server=/dungeon-server.com/114.114.114.114
 server=/dungkarime.com/114.114.114.114
 server=/dunhuang.com/114.114.114.114
+server=/dunhuangtour.com/114.114.114.114
 server=/dunjiaodu.com/114.114.114.114
 server=/dunkhome.com/114.114.114.114
 server=/dunkun.com/114.114.114.114
