--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61301,6 +61301,7 @@ server=/meiyan.chat/114.114.114.114
 server=/meiyan.com/114.114.114.114
 server=/meiyan.tech/114.114.114.114
 server=/meiyanstatic.com/114.114.114.114
+server=/meiyatour.com/114.114.114.114
 server=/meiye.art/114.114.114.114
 server=/meiyedana.com/114.114.114.114
 server=/meiyejob.com/114.114.114.114
