accelerated-domains: add taihutour.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82108,6 +82108,7 @@ server=/taihuachem.com/114.114.114.114
 server=/taihuawj.com/114.114.114.114
 server=/taihuboiler.com/114.114.114.114
 server=/taihuoniao.com/114.114.114.114
+server=/taihutour.com/114.114.114.114
 server=/taihuwang.com/114.114.114.114
 server=/taihuwater.com/114.114.114.114
 server=/taihuyuan.com/114.114.114.114
