--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22246,6 +22246,7 @@ server=/cncqsw.com/114.114.114.114
 server=/cncqti.com/114.114.114.114
 server=/cncrk.com/114.114.114.114
 server=/cncrony.com/114.114.114.114
+server=/cncruise.com/114.114.114.114
 server=/cncrypt.com/114.114.114.114
 server=/cncsen.com/114.114.114.114
 server=/cncsj.net/114.114.114.114
