accelerated-domains: add jinrixing.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50891,6 +50891,7 @@ server=/jinritemai-inc.com/114.114.114.114
 server=/jinritemai.com/114.114.114.114
 server=/jinritoutiao.com/114.114.114.114
 server=/jinriwushi.com/114.114.114.114
+server=/jinrixing.cc/114.114.114.114
 server=/jinrongbaguanv.com/114.114.114.114
 server=/jinrongdianli.com/114.114.114.114
 server=/jinronghu.com/114.114.114.114
