--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103745,6 +103745,7 @@ server=/zj-idc.com/114.114.114.114
 server=/zj-innolight.com/114.114.114.114
 server=/zj-jc.com/114.114.114.114
 server=/zj-jingyang.com/114.114.114.114
+server=/zj-mgs.com/114.114.114.114
 server=/zj-nongdu.com/114.114.114.114
 server=/zj-nuolong.com/114.114.114.114
 server=/zj-syfj.com/114.114.114.114
