accelerated-domains: add bescn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14326,6 +14326,7 @@ server=/beschannels.com/114.114.114.114
 server=/bescity.com/114.114.114.114
 server=/bescloud.com/114.114.114.114
 server=/besclouds.com/114.114.114.114
+server=/bescn.com/114.114.114.114
 server=/besg-bee.com/114.114.114.114
 server=/besget.com/114.114.114.114
 server=/beshtech.com/114.114.114.114
