--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86478,6 +86478,7 @@ server=/unshan.com/114.114.114.114
 server=/unspay.com/114.114.114.114
 server=/unsuv.com/114.114.114.114
 server=/untbbsdwarfs.com/114.114.114.114
+server=/unwtonews.com/114.114.114.114
 server=/unyecityotel.com/114.114.114.114
 server=/unyx.com/114.114.114.114
 server=/unzg.com/114.114.114.114
