--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51216,6 +51216,7 @@ server=/jiuyue919.com/114.114.114.114
 server=/jiuyuehuyu.com/114.114.114.114
 server=/jiuyuu.com/114.114.114.114
 server=/jiuzg.com/114.114.114.114
+server=/jiuzhai.com/114.114.114.114
 server=/jiuzhaigou-china.com/114.114.114.114
 server=/jiuzhang.com/114.114.114.114
 server=/jiuzheng.com/114.114.114.114
