accelerated-domains: add qdlyxx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70252,6 +70252,7 @@ server=/qdlongre.com/114.114.114.114
 server=/qdlpay.com/114.114.114.114
 server=/qdlups.com/114.114.114.114
 server=/qdlvjia.com/114.114.114.114
+server=/qdlyxx.com/114.114.114.114
 server=/qdmama.net/114.114.114.114
 server=/qdmcxh.com/114.114.114.114
 server=/qdmm.com/114.114.114.114
