--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87541,6 +87541,7 @@ server=/visionstar-tech.com/114.114.114.114
 server=/visionunion.com/114.114.114.114
 server=/visionvera.com/114.114.114.114
 server=/visirobot.com/114.114.114.114
+server=/visitsanya.com/114.114.114.114
 server=/visitsz.com/114.114.114.114
 server=/viskem.com/114.114.114.114
 server=/vista-china.net/114.114.114.114
