accelerated-domains: add china-longgong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19885,6 +19885,7 @@ server=/china-led.net/114.114.114.114
 server=/china-light-guides.com/114.114.114.114
 server=/china-lithium.com/114.114.114.114
 server=/china-liye.com/114.114.114.114
+server=/china-longgong.com/114.114.114.114
 server=/china-m2m.com/114.114.114.114
 server=/china-mcc.com/114.114.114.114
 server=/china-mile.com/114.114.114.114
