accelerated-domains: add chinataa.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20542,6 +20542,7 @@ server=/chinasuperwool.com/114.114.114.114
 server=/chinaswimmer.com/114.114.114.114
 server=/chinasws.com/114.114.114.114
 server=/chinasydw.org/114.114.114.114
+server=/chinataa.org/114.114.114.114
 server=/chinatai.com/114.114.114.114
 server=/chinatairun.com/114.114.114.114
 server=/chinataitan.com/114.114.114.114
