--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81090,6 +81090,7 @@ server=/sxswjkgs.com/114.114.114.114
 server=/sxsztv.com/114.114.114.114
 server=/sxszw.net/114.114.114.114
 server=/sxtianjian.com/114.114.114.114
+server=/sxtourgroup.com/114.114.114.114
 server=/sxtppm.com/114.114.114.114
 server=/sxtqsl.com/114.114.114.114
 server=/sxtracking.com/114.114.114.114
