accelerated-domains: add yzdyhwh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101047,6 +101047,7 @@ server=/yzdlz.com/114.114.114.114
 server=/yzdn.net/114.114.114.114
 server=/yzdryer.com/114.114.114.114
 server=/yzdx99.com/114.114.114.114
+server=/yzdyhwh.com/114.114.114.114
 server=/yzeco.com/114.114.114.114
 server=/yzej.com/114.114.114.114
 server=/yzemd.com/114.114.114.114
