accelerated-domains: add yulongtour.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100164,6 +100164,7 @@ server=/yuliqx.com/114.114.114.114
 server=/yulongdt.com/114.114.114.114
 server=/yulongjun.com/114.114.114.114
 server=/yulongsteelpipe.com/114.114.114.114
+server=/yulongtour.com/114.114.114.114
 server=/yulongwanski.com/114.114.114.114
 server=/yuloo.com/114.114.114.114
 server=/yulore.com/114.114.114.114
