--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42287,6 +42287,7 @@ server=/hgoqi.com/114.114.114.114
 server=/hgptech.com/114.114.114.114
 server=/hgqrx.com/114.114.114.114
 server=/hgs001.com/114.114.114.114
+server=/hgscn.com/114.114.114.114
 server=/hgsj.com/114.114.114.114
 server=/hgskyray.com/114.114.114.114
 server=/hgsyiyuan.com/114.114.114.114
