accelerated-domains: add yunjingdian.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100354,6 +100354,7 @@ server=/yunjiemi.net/114.114.114.114
 server=/yunjifarm.com/114.114.114.114
 server=/yunjiglobal.com/114.114.114.114
 server=/yunjing720.com/114.114.114.114
+server=/yunjingdian.net/114.114.114.114
 server=/yunjinggo.com/114.114.114.114
 server=/yunjitele.com/114.114.114.114
 server=/yunjiweidian.com/114.114.114.114
