accelerated-domains: add yangshuolvyou.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96598,6 +96598,7 @@ server=/yangshengliang.com/114.114.114.114
 server=/yangshengtang123.com/114.114.114.114
 server=/yangshengtv.com/114.114.114.114
 server=/yangshijz.com/114.114.114.114
+server=/yangshuolvyou.com/114.114.114.114
 server=/yangsihan.com/114.114.114.114
 server=/yangtaiapp.com/114.114.114.114
 server=/yangtao.site/114.114.114.114
