--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43073,6 +43073,7 @@ server=/hncj.com/114.114.114.114
 server=/hncloud.com/114.114.114.114
 server=/hncmsx.com/114.114.114.114
 server=/hncourt.org/114.114.114.114
+server=/hncpu.com/114.114.114.114
 server=/hncreate.com/114.114.114.114
 server=/hncsmtr.com/114.114.114.114
 server=/hncsvod.com/114.114.114.114
