--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63311,6 +63311,7 @@ server=/mukewang.com/114.114.114.114
 server=/mukongyun.com/114.114.114.114
 server=/mukool.com/114.114.114.114
 server=/mulangbrand.com/114.114.114.114
+server=/mulanlake.com/114.114.114.114
 server=/mulazim.com/114.114.114.114
 server=/mulightapp.com/114.114.114.114
 server=/multilingual-volc.com/114.114.114.114
