accelerated-domains: add explorehainan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30728,6 +30728,7 @@ server=/expirenotification.com/114.114.114.114
 server=/expirepausedns.com/114.114.114.114
 server=/expku.com/114.114.114.114
 server=/explinks.com/114.114.114.114
+server=/explorehainan.com/114.114.114.114
 server=/expocemat.com/114.114.114.114
 server=/expodmc.com/114.114.114.114
 server=/expoeye.net/114.114.114.114
