accelerated-domains: add xjlytz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94533,6 +94533,7 @@ server=/xjjsws.com/114.114.114.114
 server=/xjkangjia.com/114.114.114.114
 server=/xjlxw.com/114.114.114.114
 server=/xjlxzc.com/114.114.114.114
+server=/xjlytz.com/114.114.114.114
 server=/xjlz365.com/114.114.114.114
 server=/xjmachine.com/114.114.114.114
 server=/xjmg.com/114.114.114.114
