--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49075,6 +49075,7 @@ server=/iyunbiao.com/114.114.114.114
 server=/iyunche.com/114.114.114.114
 server=/iyunmai.com/114.114.114.114
 server=/iyunmu.com/114.114.114.114
+server=/iyunnan.travel/114.114.114.114
 server=/iyunshu.com/114.114.114.114
 server=/iyunv.com/114.114.114.114
 server=/iyunxh.com/114.114.114.114
