accelerated-domains: add imtaweb.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47763,6 +47763,7 @@ server=/imsilkroad.com/114.114.114.114
 server=/imsinoexpo.com/114.114.114.114
 server=/imsle.com/114.114.114.114
 server=/imsun.net/114.114.114.114
+server=/imtaweb.net/114.114.114.114
 server=/imtics.com/114.114.114.114
 server=/imtmp.net/114.114.114.114
 server=/imtte.com/114.114.114.114
