accelerated-domains: add xzwhlyjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96405,6 +96405,7 @@ server=/xzw.com/114.114.114.114
 server=/xzw.pw/114.114.114.114
 server=/xzwanda.com/114.114.114.114
 server=/xzwhg.com/114.114.114.114
+server=/xzwhlyjt.com/114.114.114.114
 server=/xzwk.hk/114.114.114.114
 server=/xzx.com/114.114.114.114
 server=/xzxjkyy.com/114.114.114.114
