accelerated-domains: add yalongbay.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96510,6 +96510,7 @@ server=/yaliaojie.com/114.114.114.114
 server=/yalikongzhi.com/114.114.114.114
 server=/yalishiyanji.com/114.114.114.114
 server=/yalixinli.com/114.114.114.114
+server=/yalongbay.net/114.114.114.114
 server=/yalongsi.com/114.114.114.114
 server=/yalqq8976.com/114.114.114.114
 server=/yamaijia.net/114.114.114.114
