--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5186,6 +5186,7 @@ server=/51web.com/114.114.114.114
 server=/51weblove.com/114.114.114.114
 server=/51websec.com/114.114.114.114
 server=/51weihu.com/114.114.114.114
+server=/51weishi.com/114.114.114.114
 server=/51weitao.net/114.114.114.114
 server=/51wendang.com/114.114.114.114
 server=/51wf.com/114.114.114.114
