--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43183,6 +43183,7 @@ server=/hnlxq.com/114.114.114.114
 server=/hnlyy.com/114.114.114.114
 server=/hnlzhd.com/114.114.114.114
 server=/hnlzw.net/114.114.114.114
+server=/hnmangshan.com/114.114.114.114
 server=/hnmcymy.com/114.114.114.114
 server=/hnmdtv.com/114.114.114.114
 server=/hnmfbw.com/114.114.114.114
