accelerated-domains: add yoyoer.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99464,6 +99464,7 @@ server=/yoyizx.com/114.114.114.114
 server=/yoyo007.com/114.114.114.114
 server=/yoyo1900.com/114.114.114.114
 server=/yoyoask.com/114.114.114.114
+server=/yoyoer.com/114.114.114.114
 server=/yoyojacky.com/114.114.114.114
 server=/yoyojie.com/114.114.114.114
 server=/yoyokko.com/114.114.114.114
