--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41168,6 +41168,7 @@ server=/hblszzs.com/114.114.114.114
 server=/hbltyh.com/114.114.114.114
 server=/hbltzb.com/114.114.114.114
 server=/hblykj.com/114.114.114.114
+server=/hblynk.com/114.114.114.114
 server=/hbm360.com/114.114.114.114
 server=/hbmajiang.com/114.114.114.114
 server=/hbmchina.com/114.114.114.114
