accelerated-domains: add tourunion.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84615,6 +84615,7 @@ server=/tourongjia.com/114.114.114.114
 server=/tourongzi.org/114.114.114.114
 server=/toursbms.com/114.114.114.114
 server=/tourscool.com/114.114.114.114
+server=/tourunion.com/114.114.114.114
 server=/tourye.com/114.114.114.114
 server=/toushibao.com/114.114.114.114
 server=/toushivip.com/114.114.114.114
