--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4668,6 +4668,7 @@ server=/517mh.net/114.114.114.114
 server=/517ming.com/114.114.114.114
 server=/517mr.com/114.114.114.114
 server=/517na.com/114.114.114.114
+server=/517sc.com/114.114.114.114
 server=/517tez.com/114.114.114.114
 server=/517xc.com/114.114.114.114
 server=/51802.com/114.114.114.114
