--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41623,6 +41623,7 @@ server=/hebeigwy.org/114.114.114.114
 server=/hebeihazhi.com/114.114.114.114
 server=/hebeihualang.com/114.114.114.114
 server=/hebeijd.com/114.114.114.114
+server=/hebeilyxh.com/114.114.114.114
 server=/hebeiminglan.com/114.114.114.114
 server=/hebeinongzi.com/114.114.114.114
 server=/hebeinongzi.net/114.114.114.114
