--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75013,6 +75013,7 @@ server=/scll.cc/114.114.114.114
 server=/sclrjc.com/114.114.114.114
 server=/sclsnk.com/114.114.114.114
 server=/sclssz.com/114.114.114.114
+server=/sclyxw.com/114.114.114.114
 server=/sclzfq.com/114.114.114.114
 server=/scm121.com/114.114.114.114
 server=/scmccboss.com/114.114.114.114
