--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81329,6 +81329,7 @@ server=/sywgy.com/114.114.114.114
 server=/sywtqc.com/114.114.114.114
 server=/syx-ac.com/114.114.114.114
 server=/syxb.com/114.114.114.114
+server=/syxidao.com/114.114.114.114
 server=/syxjjsw.com/114.114.114.114
 server=/syxlgame.com/114.114.114.114
 server=/syxt.cc/114.114.114.114
