--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96780,6 +96780,7 @@ server=/yaoq.net/114.114.114.114
 server=/yaoqing.com/114.114.114.114
 server=/yaoraomao.com/114.114.114.114
 server=/yaosai.com/114.114.114.114
+server=/yaoshanly.com/114.114.114.114
 server=/yaoshimiaolianhua.com/114.114.114.114
 server=/yaotia.com/114.114.114.114
 server=/yaotiannano.com/114.114.114.114
