accelerated-domains: add tripolers.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84880,6 +84880,7 @@ server=/tripleuuu.com/114.114.114.114
 server=/triplexservice.com/114.114.114.114
 server=/tripnearby.com/114.114.114.114
 server=/tripodeck.com/114.114.114.114
+server=/tripolers.com/114.114.114.114
 server=/tripsanxia.net/114.114.114.114
 server=/triptt.com/114.114.114.114
 server=/tripurx.com/114.114.114.114
