accelerated-domains: add qflyw.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70365,6 +70365,7 @@ server=/qfedu.com/114.114.114.114
 server=/qfeiche.com/114.114.114.114
 server=/qfgolang.com/114.114.114.114
 server=/qfihdr.com/114.114.114.114
+server=/qflyw.net/114.114.114.114
 server=/qfns1.com/114.114.114.114
 server=/qfpay.com/114.114.114.114
 server=/qfpq.com/114.114.114.114
