accelerated-domains: add lianchuanghj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57153,6 +57153,7 @@ server=/lianaibashi.com/114.114.114.114
 server=/lianaibiji.com/114.114.114.114
 server=/lianbei66.com/114.114.114.114
 server=/lianchuang.com/114.114.114.114
+server=/lianchuanghj.com/114.114.114.114
 server=/liancsoft.com/114.114.114.114
 server=/lianda.fun/114.114.114.114
 server=/liandaomobi.com/114.114.114.114
