--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58589,6 +58589,7 @@ server=/london9999.com/114.114.114.114
 server=/lonelystar.org/114.114.114.114
 server=/lonery.com/114.114.114.114
 server=/lonfoor.com/114.114.114.114
+server=/long-photo.com/114.114.114.114
 server=/long.ge/114.114.114.114
 server=/long5.com/114.114.114.114
 server=/long7.com/114.114.114.114
