accelerated-domains: add bhlyw.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14604,6 +14604,7 @@ server=/bhjinghao.com/114.114.114.114
 server=/bhjjj360.com/114.114.114.114
 server=/bhkyxy.com/114.114.114.114
 server=/bhlib.com/114.114.114.114
+server=/bhlyw.net/114.114.114.114
 server=/bhmlsys.com/114.114.114.114
 server=/bhnet.net/114.114.114.114
 server=/bhnge.com/114.114.114.114
