accelerated-domains: add hcxfjq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41428,6 +41428,7 @@ server=/hcwljy.com/114.114.114.114
 server=/hcx123.com/114.114.114.114
 server=/hcx99.com/114.114.114.114
 server=/hcxcw.com/114.114.114.114
+server=/hcxfjq.com/114.114.114.114
 server=/hcxgz.net/114.114.114.114
 server=/hcxqw.com/114.114.114.114
 server=/hcxwdb.com/114.114.114.114
