--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43262,6 +43262,7 @@ server=/hnsjrd.com/114.114.114.114
 server=/hnsktc.com/114.114.114.114
 server=/hnskxy.com/114.114.114.114
 server=/hnsky.net/114.114.114.114
+server=/hnslytz.com/114.114.114.114
 server=/hnsoftedu.com/114.114.114.114
 server=/hnsong.net/114.114.114.114
 server=/hnsqtg.com/114.114.114.114
