accelerated-domains: add kazl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53893,6 +53893,7 @@ server=/kaytune.com/114.114.114.114
 server=/kazakcnr.com/114.114.114.114
 server=/kazhifu.com/114.114.114.114
 server=/kazithai.com/114.114.114.114
+server=/kazl.com/114.114.114.114
 server=/kb.com/114.114.114.114
 server=/kb9.com/114.114.114.114
 server=/kbans.com/114.114.114.114
