accelerated-domains: add lvyouf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59488,6 +59488,7 @@ server=/lvyinba.com/114.114.114.114
 server=/lvyou168.net/114.114.114.114
 server=/lvyou521.com/114.114.114.114
 server=/lvyoubei.com/114.114.114.114
+server=/lvyouf.com/114.114.114.114
 server=/lvyoukan.com/114.114.114.114
 server=/lvyounong.com/114.114.114.114
 server=/lvyouw.net/114.114.114.114
