accelerated-domains: add xasrite.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92287,6 +92287,7 @@ server=/xashuiwu.com/114.114.114.114
 server=/xashzhjz.com/114.114.114.114
 server=/xasimonds.com/114.114.114.114
 server=/xasrc.com/114.114.114.114
+server=/xasrite.com/114.114.114.114
 server=/xasun.com/114.114.114.114
 server=/xatc168.com/114.114.114.114
 server=/xatcrj.com/114.114.114.114
