accelerated-domains: add ltly.so

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59080,6 +59080,7 @@ server=/ltjianhe.com/114.114.114.114
 server=/ltkqjt.com/114.114.114.114
 server=/ltl5210.com/114.114.114.114
 server=/ltld.net/114.114.114.114
+server=/ltly.so/114.114.114.114
 server=/ltnic.com/114.114.114.114
 server=/ltoit.com/114.114.114.114
 server=/ltopto.com/114.114.114.114
