accelerated-domains: add sxtourism.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81114,6 +81114,7 @@ server=/sxsztv.com/114.114.114.114
 server=/sxszw.net/114.114.114.114
 server=/sxtianjian.com/114.114.114.114
 server=/sxtourgroup.com/114.114.114.114
+server=/sxtourism.com/114.114.114.114
 server=/sxtppm.com/114.114.114.114
 server=/sxtqsl.com/114.114.114.114
 server=/sxtracking.com/114.114.114.114
