accelerated-domains: add ynpti.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98802,6 +98802,7 @@ server=/ynmec.com/114.114.114.114
 server=/ynmzly.com/114.114.114.114
 server=/ynnits.com/114.114.114.114
 server=/ynpco.com/114.114.114.114
+server=/ynpti.com/114.114.114.114
 server=/ynpxrz.com/114.114.114.114
 server=/ynqjnews.net/114.114.114.114
 server=/ynqrmyy.com/114.114.114.114
