--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30367,6 +30367,7 @@ server=/eskuvoifoto.com/114.114.114.114
 server=/eskux.xyz/114.114.114.114
 server=/eskysky.com/114.114.114.114
 server=/eslosity.com/114.114.114.114
+server=/eslygroup.com/114.114.114.114
 server=/esmartwave.com/114.114.114.114
 server=/esnai.com/114.114.114.114
 server=/esnai.net/114.114.114.114
